Transferred front-end JS to back-end.
Changed also: Certain comment placement to make things correct later.

--- a/css/chattr.css
+++ b/css/chattr.css
@@ -82,16 +82,9 @@
 	margin-left: -10px;
 }
 
-.userListContainer {
-    height: 870px;
+.container {
+    height: 900px;
     padding: 16px;
-    overflow-y: scroll;
-}
-
-.messageContainer {
-    height: 870px;
-    padding: 16px;
-    overflow-y: scroll;
 }
 
 .messageForm {
