--- a/homepage/css/style.css
+++ b/homepage/css/style.css
@@ -6,7 +6,8 @@ body {
   line-height: 1.7;
   color: gray;
   font-weight: 400;
-  font-size: 1rem; }
+  font-size: 1rem; 
+  padding-right: 0 !important }
 
 ::-moz-selection {
   background: #000;
