--- a/css/chattr.css
+++ b/css/chattr.css
@@ -64,6 +64,21 @@ body {
 	margin-right: -10px;
 }
 
+.speech-bubble.right.private:after {
+    content: '';
+    position: absolute;
+    right: 0;
+    top: 50%;
+    width: 0;
+    height: 0;
+    border: 15px solid transparent;
+    border-left-color: #17a2b8;
+    border-right: 0;
+    border-bottom: 0;
+    margin-top: -10px;
+    margin-right: -10px;
+}
+
 .speech-bubble.left{
 	position: relative;
 	background: #f8f9fa;
@@ -84,6 +99,21 @@ body {
 	border-bottom: 0;
 	margin-top: -10px;
 	margin-left: -10px;
+}
+
+.speech-bubble.left.private:after {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 50%;
+    width: 0;
+    height: 0;
+    border: 15px solid transparent;
+    border-right-color: #17a2b8;
+    border-left: 0;
+    border-bottom: 0;
+    margin-top: -10px;
+    margin-left: -10px;
 }
 
 .container {
